created OrderBookedEvent
