# src/main/java/com/template/model/entity/OrderEntity.java
@@ -1,0 +1,28 @@
+package com.template.model.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.time.LocalDate;
+
+@Entity
+@Getter
+@Setter
+@Table(name = "orders")
+public class OrderEntity extends BaseEntity {
+
+    @Column(name = "name")
+    private String name;
+
+    @Column(name = "price")
+    private Integer price;
+
+    @Column(name = "status")
+    private String status;
+
+    @Column(name = "date")
+    private LocalDate date;
+}
